--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,12 @@
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   %body
+    %header.header
+      .header_logos
+        %p.header_pageTitle
+          = 'Boards'
+    
+          = image_tag 'default-avatar.png'
     = yield
-    %p.notice= notice
-    %p.alert= alert
+      
+        
