--- a/app/views/boards/index.html.haml
+++ b/app/views/boards/index.html.haml
@@ -2,6 +2,9 @@
 
 .container
   - @boards.each do |board|
-    = board.title
-    = board.content
+    = render 'commons/board', board: board
   
+  .add_new_card
+  = link_to new_board_path do
+    .add_new_card_text
+      + Add new board
