--- a/app/views/commons/_board.html.haml
+++ b/app/views/commons/_board.html.haml
@@ -1,4 +1,11 @@
-= link_to board_path(board) %do
-  = article.title
+.card
+  .card_content
+    .card_title
+      = board.title
+    .card_content
+      = board.content
+    .card_button
+        
+    .card_detail
   
-    
+        
