--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -1,10 +1,10 @@
 .board
   %h1.board_title= @board.title
   - @tasks.each do |task|
-    =task.title
+    = render 'commons/task', task: task
 
 .add_new_card
-  =link_to new_task_path do
+  = link_to new_board_task_path(@board) do
     .add_new_card_text
       +Add new task
     
