--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -1,5 +1,5 @@
 .container
-  = form_with(model: task, local: true) do |f|
+  = form_with(model: @task, url: board_tasks_path(@task.board), local: true) do |f|
     %div
       = f.label :title, 'タイトル'
     %div
