--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -12,4 +12,6 @@
       = f.label :limit, '期限'
     %div
       = f.date_field :limit
+    %div
+      = f.hidden_field :user_id, :value => user_id
     = f.submit '保存', class: 'btn-primary'
