--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -47,6 +47,23 @@
         mix-blend-mode: normal;
         // opacity: 0.4;
     }
+
+    &_image {
+        height: 180px;
+        position: relative;
+        overflow: hidden;
+        
+
+        img {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          -webkit-transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+          width: 100%;
+        }
+    }
 }
 
 .add_new_card {
