--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -1,6 +1,10 @@
 .container
   = form_with(model: @task, url: board_tasks_path(@task.board), local: true) do |f|
     %div
+      = f.label :eyecatch, 'アイキャッチ'
+    %div
+      = f.file_field :eyecatch
+    %div
       = f.label :title, 'タイトル'
     %div
       = f.text_field :title, class: 'text'
