--- a/app/views/commons/_task.html.haml
+++ b/app/views/commons/_task.html.haml
@@ -1,5 +1,5 @@
 .card
-  = link_to board_task_path(task) do
+  = link_to board_task_path(board_id: @board.id, id: task.id) do
     .card_content
       - if task.eyecatch.attached?
         .card_image
@@ -8,6 +8,11 @@
       = task.title
     .card_content
       = task.content
+    .dropdown
+      = image_tag 'actions.svg', class: 'dropbtn'
+      .dropdown-content.mini
+        = link_to '編集する',  edit_board_path(task)
+        = link_to '削除する',  board_path(task), data: { method: 'delete', confirm: '本当に削除してもよろしいですか'}
         
         
       
