--- a/app/views/commons/_task.html.haml
+++ b/app/views/commons/_task.html.haml
@@ -11,8 +11,8 @@
     .dropdown
       = image_tag 'actions.svg', class: 'dropbtn'
       .dropdown-content.mini
-        = link_to '編集する',  edit_board_path(task)
-        = link_to '削除する',  board_path(task), data: { method: 'delete', confirm: '本当に削除してもよろしいですか'}
+        = link_to '編集する',  edit_board_task_path(board_id: @board.id, id: task.id)
+        = link_to '削除する',  board_task_path(board_id: @board.id, id: task.id), data: { method: 'delete', confirm: '本当に削除してもよろしいですか'}
         
         
       
