ログアウト

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -2,6 +2,10 @@
     position: relative;
     display: inline-block;
     float: right;
+
+    &_img {
+        width: 10px;
+    }
   }
   
   .dropdown-content {
