--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,8 @@
     %header.header
       .header_logos
         %p.header_title
-          = 'Boards'
+          = link_to root_path do
+            = 'Boards'
         
         .dropdown
           .dropdown_img
