人には人のboard,task

--- a/app/views/commons/_board.html.haml
+++ b/app/views/commons/_board.html.haml
@@ -6,12 +6,13 @@
       .card_content
         = board.content
       .card_name
-        
-      .dropdown
-        = image_tag 'actions.svg', class: 'dropbtn'
-        .dropdown-content.mini
-          = link_to '編集する',  edit_board_path(board)
-          = link_to '削除する',  board_path(board), data: { method: 'delete', confirm: '本当に削除してもよろしいですか'}
+
+      - if user_signed_in? && current_user.boards.exists?(id: board.id)
+        .dropdown
+          = image_tag 'actions.svg', class: 'dropbtn'
+          .dropdown-content.mini
+            = link_to '編集する',  edit_board_path(board)
+            = link_to '削除する',  board_path(board), data: { method: 'delete', confirm: '本当に削除してもよろしいですか'}
     
   
         
