--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,12 +15,15 @@
         %p.header_title
           = link_to root_path do
             = 'Boards'
-        
-        .dropdown
-          .dropdown_img
-          = image_tag 'Image.png', class: 'dropbtn'
-          .dropdown-content.mini
-            = link_to 'ログアウト',  destroy_user_session_path, data: { method: 'delete' }
+        - if user_signed_in?
+          .dropdown
+            .dropdown_img
+              = image_tag 'Image.png', class: 'dropbtn'
+            .dropdown-content.mini
+              = link_to 'ログアウト',  destroy_user_session_path, data: { method: 'delete' }
+        - else
+          = link_to 'ログイン', new_user_session_path
+          
 
         %p.header_border
 
