--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -1,1 +1,10 @@
-edit
+= form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
+  %div
+    = f.label :avatar, 'アバター'
+  %div
+    = f.file_field :avatar
+  %div
+    = f.label :nickname, 'ハンドルネーム'
+  %div
+    = f.text_field :nickname, class: 'text'
+  = f.submit '保存', class: 'btn-primary'
