--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,6 +1,6 @@
 
 
 = link_to 'Edit', edit_profile_path
-
-= image_tag current_user.avatar_image
+.avatar
+  = image_tag current_user.avatar_image
 #{current_user.display_name}
