--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -4,15 +4,15 @@
     display: flex;
     
 
-    &_avatar {
+    // &_avatar {
         
-        position: absolute;
-        width: 30px;
-        height: 20px;
-        left: 352px;
-        top: 10px;
+    //     position: absolute;
+    //     width: 30px;
+    //     height: 20px;
+    //     left: 352px;
+    //     top: 10px;
    
-    }
+    // }
 
     &_border {
         position: absolute;
@@ -27,11 +27,11 @@
     }
 
     &_title {
-        position: absolute;
-        width: 56px;
-        height: 25px;
-        left: 30px;
-        top: 17px;
+        // position: absolute;
+        // width: 56px;
+        // height: 25px;
+        // left: 30px;
+        // top: 17px;
 
         font-family: Avenir;
         font-style: normal;
