--- a/app/views/commons/_board.html.haml
+++ b/app/views/commons/_board.html.haml
@@ -14,5 +14,5 @@
             = link_to '編集する',  edit_board_path(board)
             = link_to '削除する',  board_path(board), data: { method: 'delete', confirm: '本当に削除してもよろしいですか'}
     
-  
+      = image_tag board.user.avatar_image, class: 'default_avatar'
         
