--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,6 +1,6 @@
 
 
-= link_to 'Edit', edit_profile_path
-.avatar
-  = image_tag current_user.avatar_image
+= link_to 'Edit', edit_profile_path, class: 'btn_primary'
+
+= image_tag current_user.avatar_image, class: 'avatar_image'
 #{current_user.display_name}
