--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,8 @@
  @import 'card';
  @import 'common';
  @import 'img';
+ @import 'form';
+ @import 'buttons';
 
  body {
      background-color: #F2F2F2;
