--- a/app/views/commons/_board.html.haml
+++ b/app/views/commons/_board.html.haml
@@ -1,18 +1,17 @@
-= link_to board_path(board) do
+= link_to  board_path(board), class: "text-decoration" do
   .card
+    .card_title
+      = board.title
     .card_content
-      .card_title
-        = board.title
-      .card_content
-        = board.content
-      .card_name
+      = board.content
+    .card_name
 
-      - if user_signed_in? && current_user.boards.exists?(id: board.id)
-        .dropdown
-          = image_tag 'actions.svg', class: 'dropbtn'
-          .dropdown-content.mini
-            = link_to '編集する',  edit_board_path(board)
-            = link_to '削除する',  board_path(board), data: { method: 'delete', confirm: '本当に削除してもよろしいですか'}
-    
-      = image_tag board.user.avatar_image, class: 'default_avatar'
+    - if user_signed_in? && current_user.boards.exists?(id: board.id)
+      .dropdown
+        = image_tag 'actions.svg', class: 'dropbtn'
+        .dropdown-content.mini
+          = link_to '編集する',  edit_board_path(board)
+          = link_to '削除する',  board_path(board), data: { method: 'delete', confirm: '本当に削除してもよろしいですか'}
+      
+    = image_tag board.user.avatar_image, class: "avatar_image_index"
         
