--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -1,11 +1,20 @@
 @import './variables';
 
 .btn-primary {
-    background-color: $primary-color;
-    border: none;
-    width: 100%;
-    text-align: center;
-    color: white;
-    padding: 16px 0;
-    font-weight: bold;
+    width: 362px;
+    height: 40px;
+
+    background: #F8BD1C;
+    border-radius: 4px;
+    // transform: matrix(1, 0, 0, -1, 0, 0);
+}
+
+.profile-edit-btn {
+    text-decoration: none;
+    border: solid;
+    border-radius: 4px;
+    background: #F8BD1C;
+    color: black;
+    border-color: #F8BD1C;
+
 }
