--- a/app/views/boards/_form.html.haml
+++ b/app/views/boards/_form.html.haml
@@ -3,11 +3,11 @@
     %div
       = f.label :title, 'name'
     %div
-      = f.text_field :title, class: 'text'
+      = f.text_field :title, class: "title_form"
     %div
       = f.label :content, 'Description'
     %div
-      = f.text_area :content
+      = f.text_area :content, class: "content_form"
     = f.submit 'submit', class: 'btn-primary'
       
   
