--- a/app/views/commons/_task.html.haml
+++ b/app/views/commons/_task.html.haml
@@ -1,15 +1,15 @@
 .card
-  = link_to board_task_path(board_id: @board.id, id: task.id) do
+  = link_to board_task_path(board_id: @board.id, id: task.id), class: "text-decoration" do
     .card_content
       - if task.eyecatch.attached?
         .card_image
-          = image_tag task.eyecatch
+          = image_tag task.eyecatch, class: 'eyecatch'
     .card_title
       = task.title
     .card_content
       = task.content
     
-    = image_tag task.user.avatar_image, class: 'default_avatar'
+    = image_tag task.user.avatar_image, class: 'avatar_image_index'
 
     - if user_signed_in? && current_user.tasks.exists?(id: task.id)
       .dropdown
