--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,13 +13,13 @@
     %header.header
       .header_logos
         %p.header_title
-          = link_to root_path do
+          = link_to root_path, class: "text-decoration " do
             = 'Boards'
       .header_avatar
         - if user_signed_in?
           .dropdown
             .dropdown_img
-              = image_tag current_user.avatar_image, class: 'default_avatar'
+              = image_tag current_user.avatar_image, class: 'avatar_image'
             .dropdown-content.mini
               = link_to 'プロフィール', profile_path
               = link_to 'ログアウト',  destroy_user_session_path, data: { method: 'delete' }
