--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,6 +1,6 @@
 
 
-= link_to 'Edit', edit_profile_path, class: 'btn_primary'
+= link_to 'Edit', edit_profile_path, class: 'profile-edit-btn'
 
-= image_tag current_user.avatar_image, class: 'avatar_image'
+= image_tag current_user.avatar_image, class: 'profile_avatar_image profile_image'
 #{current_user.display_name}
