--- a/app/views/tasks/_form_new.html.haml
+++ b/app/views/tasks/_form_new.html.haml
@@ -7,17 +7,17 @@
     %div
       = f.label :title, 'タイトル'
     %div
-      = f.text_field :title, class: 'text'
+      = f.text_field :title, class: 'title_form'
     %div
       = f.label :content, '内容'
     %div
-      = f.text_area :content
+      = f.text_area :content, class: 'content_form'
     %div
       = f.label :limit, '期限'
     %div
       = f.date_field :limit
     %div
       = f.hidden_field :user_id, :value => user_id
-    = f.submit '保存', class: 'btn-primary'
+    = f.submit 'submit', class: 'btn-primary'
 
 -# url: board_tasks_path(@task.board)
