--- a/app/assets/stylesheets/img.scss
+++ b/app/assets/stylesheets/img.scss
@@ -20,5 +20,16 @@
     height: 150px;
 }
 
+.task_image {
+    position: relative;
+    left: 24px;
+    top: 30px;
+    width: 360px;
+    height: 170px;
+
+    border-radius: 8px;
+    
+}
+
 
 
