--- a/app/assets/stylesheets/task.scss
+++ b/app/assets/stylesheets/task.scss
@@ -110,3 +110,11 @@
     // height: 57px;
 }
 
+.add_new_comment_text {
+    position: relative;
+    top: 18px;
+    left: 95px;
+
+    color: black;
+}
+
