--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -1,5 +1,12 @@
 .board
   %h1.board_title= @board.title
+  - if user_signed_in? && current_user.boards.exists?(id: @board.id)
+    .dropdown.dropbtn_edit
+      = image_tag 'actions.svg'
+      .dropdown-content.mini
+        = link_to '編集する',  edit_board_path(@board)
+        = link_to '削除する',  board_path(@board), data: { method: 'delete', confirm: '本当に削除してもよろしいですか'}
+
   - @tasks.each do |task|
     = render 'commons/task', task: task , board: @board
 
