--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -18,3 +18,50 @@
     border-color: #F8BD1C;
 
 }
+
+.login_btn {
+    background: #F8BD1C;
+    border-radius: 4px;
+    border-color: #F8BD1C;
+    width: 362px;
+    height: 40px;
+
+    margin-bottom: 0px;
+
+    position: relative;
+    left: 24px;
+    top: 270px;
+
+    color: white;
+
+}
+
+.sign_up_btn {
+    background: #F8BD1C;
+    border-radius: 4px;
+    border-color: #F8BD1C;
+    width: 362px;
+    height: 40px;
+
+    color:white;
+
+    position: relative;
+    left: 24px;
+    top: 230px;
+}
+
+.dropbtn_edit {
+    position: relative;
+    right: 310px;
+    bottom: 50px;
+
+    height: 5px;
+}
+
+.dropbtn_task {
+    position: relative;
+    right: 320px;
+    bottom: 5px;
+
+    height: 5px;
+}
