--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -13,3 +13,70 @@
     background: #F4F4F4;
     border-radius: 10px;
 }
+
+.email_form {
+    width: 362px;
+    height: 40px;
+
+    background: #F4F4F4;
+    border-radius: 10px;
+    border-color: #F4F4F4;
+}
+
+.password_form {
+    width: 362px;
+    height: 40px;
+
+    background: #F4F4F4;
+    border-radius: 10px;
+    border-color: #F4F4F4;
+}
+
+.login_form {
+    position: relative;
+    left: 24px;
+
+    &_label {
+        position: relative;
+        left: 24px;
+
+        margin-top: 20px;
+        margin-bottom: 10px;
+
+        font-family: Avenir;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 18px;
+        line-height: 25px;
+        /* identical to box height */
+
+
+        color: #000000;
+
+    }
+}
+
+.login_title {
+    position: relative;
+    left: 24px;
+
+    font-family: Avenir;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 36px;
+    /* identical to box height */
+
+
+    color: #000000;
+}
+
+.user-links {
+    text-decoration: none;
+    position: relative;
+    left: 24px;
+
+    color: #000000;
+
+}
+
