--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,10 +1,10 @@
-%h2 Forgot your password?
+%h2.login_title Forgot your password?
 = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
   = render "devise/shared/error_messages", resource: resource
-  .field
+  %div.login_form_label
     = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .actions
-    = f.submit "Send me reset password instructions"
+  %div.login_form
+    = f.email_field :email, autofocus: true, autocomplete: "email", class: 'email_form'
+  %div
+    = f.submit "Send me reset password instructions", class: 'sign_up_btn'
 = render "devise/shared/links"
