--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,8 @@
  @import 'img';
  @import 'form';
  @import 'buttons';
+ @import 'task';
+ @import 'profile';
 
  body {
      background-color: white;
