--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -4,6 +4,7 @@
 
     background: #F4F4F4;
     border-radius: 10px;
+    border-color: #F4F4F4;
 }
 
 .content_form {
@@ -12,6 +13,7 @@
 
     background: #F4F4F4;
     border-radius: 10px;
+    border-color: #F4F4F4;
 }
 
 .email_form {
@@ -32,7 +34,7 @@
     border-color: #F4F4F4;
 }
 
-.login_form {
+.form {
     position: relative;
     left: 24px;
 
