--- a/app/assets/stylesheets/img.scss
+++ b/app/assets/stylesheets/img.scss
@@ -1,6 +1,7 @@
 .eyecatch {
     position: relative;
     top: 20px;
+    left: 0px;
 
     width: 322px;
     height: 170px;
@@ -18,6 +19,9 @@
     border-radius: 50%;
     width: 150px;
     height: 150px;
+
+    position: relative;
+    top: 20px;
 }
 
 .task_image {
@@ -29,6 +33,17 @@
 
     border-radius: 8px;
     
+}
+
+.eyecatch-in-card {
+    position: relative;
+    top: 20px;
+    left: 20px;
+
+    width: 322px;
+    height: 170px;
+
+    border-radius: 8px;
 }
 
 
