--- a/app/views/boards/_form.html.haml
+++ b/app/views/boards/_form.html.haml
@@ -1,14 +1,14 @@
 .container
   = form_with(model: board, local: true) do |f|
-    %div
+    %div.form_label
       = f.label :title, 'name'
-    %div
-      = f.text_field :title, class: "title_form"
-    %div
+    %div.form
+      = f.text_field :title, class: 'title_form'
+    %div.form_label
       = f.label :content, 'Description'
-    %div
-      = f.text_area :content, class: "content_form"
-    = f.submit 'submit', class: 'btn-primary'
+    %div.form
+      = f.text_area :content, class: 'content_form'
+    = f.submit 'submit', class: 'submit_btn'
       
   
     
