--- a/app/views/commons/_task.html.haml
+++ b/app/views/commons/_task.html.haml
@@ -1,16 +1,26 @@
-.card
-  = link_to board_task_path(board_id: @board.id, id: task.id), class: "text-decoration" do
-    .card_content
-      - if task.eyecatch.attached?
-        .card_image
-          = image_tag task.eyecatch, class: 'eyecatch'
-    .card_title
-      = task.title
-    .card_content
-      = task.content
+- if task.eyecatch.attached?
+  .card-in-image
+    = link_to board_task_path(board_id: @board.id, id: task.id), class: "text-decoration" do    
+      = image_tag task.eyecatch, class: 'eyecatch-in-card'
     
-    = image_tag task.user.avatar_image, class: 'avatar_image_index'
+      .card-in-image_title
+        = task.title 
+      .card-in-image_content
+        = task.content    
+      = image_tag task.user.avatar_image, class: 'avatar_image_index'
 
+- else
+  .card
+    = link_to board_task_path(board_id: @board.id, id: task.id), class: "text-decoration" do
+      .card_content     
+        
+          
+      .card_title
+        = task.title
+      .card_content
+        = task.content
+      
+      = image_tag task.user.avatar_image, class: 'avatar_image_index'
     
         
         
