--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,21 +1,21 @@
 %h2.login_title Sign up
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = render "devise/shared/error_messages", resource: resource
-  %div.login_form_label
+  %div.form_label
     = f.label :email
-  %div.login_form
+  %div.form
     = f.email_field :email, autofocus: true, autocomplete: "email", class: 'email_form'
-  %div.login_form_label
+  %div.form_label
     = f.label :password
     - if @minimum_password_length
       %em
         (#{@minimum_password_length} characters minimum)
-  %div.login_form
+  %div.form
     = f.password_field :password, autocomplete: "new-password", class: 'password_form'
-  %div.login_form_label
+  %div.form_label
     = f.label :password_confirmation
-  %div.login_form
+  %div.form
     = f.password_field :password_confirmation, autocomplete: "new-password", class: 'password_form'
   .div
-    = f.submit "Sign up", class: 'sign_up_btn'
+    = f.submit "Sign up", class: 'submit_btn'
 = render "devise/shared/links", class: 'margin-bottom'
