--- a/app/views/tasks/_form_edit.html.haml
+++ b/app/views/tasks/_form_edit.html.haml
@@ -1,21 +1,21 @@
 .container               
   = form_with(model: task, url: board_task_path(board_id: board, id: @task.id), local: true) do |f|
-    %div
+    %div.form
       = f.label :eyecatch, 'アイキャッチ'
-    %div
+    %div.form
       = f.file_field :eyecatch
-    %div
+    %div.form_label
       = f.label :title, 'タイトル'
-    %div
-      = f.text_field :title, class: 'text'
-    %div
+    %div.form
+      = f.text_field :title, class: 'title_form'
+    %div.form_label
       = f.label :content, '内容'
-    %div
-      = f.text_area :content
-    %div
+    %div.form
+      = f.text_area :content, class: 'content_form'
+    %div.form_label
       = f.label :limit, '期限'
-    %div
+    %div.form
       = f.date_field :limit
     %div
       = f.hidden_field :user_id, :value => user_id
-    = f.submit '保存', class: 'btn-primary'
+    = f.submit '保存', class: 'submit_btn'
